Q1P1a) add output for cancelled flights and explanation

--- a/Assignment 1/assignment_part1.ipynb
+++ b/Assignment 1/assignment_part1.ipynb
@@ -84,7 +84,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -123,7 +125,7 @@
    "metadata": {},
    "source": [
     "#### a) Unique values: \n",
-    "Mention the unique values for cancelation reason in the <b>sampled_data</b>. Also, mention the unique values of this feature where the flights have been canceled and where the flights have not been canceled. Explain the difference."
+    "Mention the unique values for cancellation reason in the <b>sampled_data</b>. Also, mention the unique values of this feature where the flights have been cancelled and where the flights have not been cancelled. Explain the difference."
    ]
   },
   {
@@ -132,16 +134,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('unique values for column \\'CANCELLATION_REASON\\': ' , sampled_data['CANCELLATION_REASON'].unique())\n",
-    "print('unique values for column \\'CANCELLATION_REASON\\' without canceled flight: ' , (sampled_data[sampled_data['CANCELLED'] == 0])['CANCELLATION_REASON'].unique())"
+    "key = 'CANCELLATION_REASON'\n",
+    "print('unique values for column \\'{}\\': '.format(key) , sampled_data[key].unique())\n",
+    "print('unique values for column \\'{}\\' without cancelled flight: '.format(key) , (sampled_data[sampled_data['CANCELLED'] == 0])[key].unique())\n",
+    "print('unique values for column \\'{}\\' with cancelled flight: '.format(key) , (sampled_data[sampled_data['CANCELLED'] == 1])[key].unique())"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    Your answer:\n",
-    "    "
+    "    Your answer: \n",
+    "        The unique values are displayed in the above output. \n",
+    "        For flights that have not been cancelled, the value is 'N', likely for 'not cancelles'. For cancelled flights the\n",
+    "        other possible values appear, but not 'N'."
    ]
   },
   {
