Q1P1b) add analysis of unique values and answer text

--- a/Assignment 1/assignment_part1.ipynb
+++ b/Assignment 1/assignment_part1.ipynb
@@ -146,7 +146,7 @@
    "source": [
     "    Your answer: \n",
     "        The unique values are displayed in the above output. \n",
-    "        For flights that have not been cancelled, the value is 'N', likely for 'not cancelles'. For cancelled flights the\n",
+    "        For flights that have not been cancelled, the value is 'N', likely for 'not cancelled'. For cancelled flights the\n",
     "        other possible values appear, but not 'N'."
    ]
   },
@@ -155,7 +155,7 @@
    "metadata": {},
    "source": [
     "#### b) Null values: \n",
-    "Remove all the rows with null values from the <b>sampled_data</b>. Let's call this new dataset <b>no_null_data</b>. Show the unique values for cancelation reason in <b>no_null_data</b> and compare them to the unique values in <b>sampled_data</b>. Can you explain the difference? "
+    "Remove all the rows with null values from the <b>sampled_data</b>. Let's call this new dataset <b>no_null_data</b>. Show the unique values for cancellation reason in <b>no_null_data</b> and compare them to the unique values in <b>sampled_data</b>. Can you explain the difference? "
    ]
   },
   {
@@ -164,14 +164,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "no_null_data = sampled_data.dropna()"
+    "# drop all rows with null values\n",
+    "no_null_data = sampled_data.dropna()\n",
+    "\n",
+    "print('unique values for column \\'{}\\': '.format(key) , no_null_data[key].unique())"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    Your answer:\n",
+    "    Your answer: \n",
+    "        In the no_null_data dataset, only flights which did not get cancelled appear and therefore the only \n",
+    "        unique value for the column 'CANCELLATION_REASON' is 'N'. This happens because information about the flight delay is\n",
+    "        missing for all cancelled flights.\n",
     "    "
    ]
   },
