Q1P1c) split code for clearer structure

--- a/Assignment 1/assignment_part1.ipynb
+++ b/Assignment 1/assignment_part1.ipynb
@@ -201,17 +201,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# filter data for airline and departure delay\n",
     "ev_data = no_null_data.loc[(no_null_data.AIRLINE == 'EV') & (no_null_data.DEPARTURE_DELAY.isin([2,6]))]\n",
-    "\n",
+    "ev_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "plt.figure(figsize=(2,3))\n",
-    "plt.boxplot(ev_data['LATE_AIRCRAFT_DELAY'])\n",
-    "plt.figure(figsize=(2,3))\n",
-    "plt.boxplot(ev_data['AIR_SYSTEM_DELAY'])\n",
     "\n",
     "def get_outlier_min_max(data):\n",
+    "    '''return lower and upper bound for outliers'''\n",
     "    q1 = np.quantile(data, 0.25)\n",
     "    q3 = np.quantile(data, 0.75)\n",
     "\n",
@@ -220,14 +224,33 @@
     "    upper_bound = q3+(1.5*iqr)\n",
     "    lower_bound = q1-(1.5*iqr)\n",
     "\n",
-    "    return (lower_bound, upper_bound)\n",
+    "    return (lower_bound, upper_bound)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# Select and remove outliers from 'LATE_AIRCRAFT_DELAY'\n",
+    "ev_data.boxplot(column=['LATE_AIRCRAFT_DELAY'])\n",
     "\n",
-    "\n",
-    "# Selecting the outliers from 'LATE_AIRCRAFT_DELAY'\n",
     "borders_LAD = get_outlier_min_max(ev_data['LATE_AIRCRAFT_DELAY'])\n",
-    "cleaned_data_late_aircraft = ev_data[(ev_data['LATE_AIRCRAFT_DELAY'] >= borders_LAD[0]) & (ev_data['LATE_AIRCRAFT_DELAY'] <= borders_LAD[1])]\n",
+    "cleaned_data_late_aircraft = ev_data[(ev_data['LATE_AIRCRAFT_DELAY'] >= borders_LAD[0]) & (ev_data['LATE_AIRCRAFT_DELAY'] <= borders_LAD[1])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Select and remove outliers from 'AIR_SYSTEM_DELAY'\n",
+    "ev_data.boxplot(column=['AIR_SYSTEM_DELAY'], return_type='dict')\n",
     "\n",
-    "# Selecting the outliers from 'AIR_SYSTEM_DELAY'\n",
     "borders_ASD = get_outlier_min_max(ev_data['AIR_SYSTEM_DELAY'])\n",
     "cleaned_data_air_system = ev_data[(ev_data['AIR_SYSTEM_DELAY'] >= borders_ASD[0]) & (ev_data['AIR_SYSTEM_DELAY'] <= borders_ASD[1])]"
    ]
