work on question 1
change line plots to ar plots
change median to mean in one plot
remove sort statements (groupby already sots by itself)
add some alternative versions for the more complex analyses

--- a/Assignment 1/assignment_part1.ipynb
+++ b/Assignment 1/assignment_part1.ipynb
@@ -292,7 +292,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    Your answer: \n",
+    "    Your answer: median, mean and mode are very similar for all three datasets. However, standard deviation and variance are much lower for the air system dataset. The other two are similar \n",
+    "                    \n",
     "    "
    ]
   },
@@ -317,7 +318,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "no_null_data.sort_values('MONTH').groupby(['MONTH'])['ARRIVAL_DELAY'].median().plot()"
+    "no_null_data.groupby(['MONTH'])['ARRIVAL_DELAY'].mean().plot.bar(title='Mean Arrival Delay by Month')"
    ]
   },
   {
@@ -326,7 +327,7 @@
    "source": [
     "    Your answer:\n",
     "    for minimum delay, I would choose either september or october\n",
-    "    the worst months are june and july or august"
+    "    the worst months are june and december"
    ]
   },
   {
@@ -340,10 +341,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "no_null_data.sort_values('MONTH').groupby(['MONTH'])['WEATHER_DELAY'].mean().plot()"
+    "no_null_data.groupby(['MONTH'])['WEATHER_DELAY'].mean().plot.bar(title='Mean Weather Delay by Month')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Plot for relationship between arrival delay and weather delay"
    ]
   },
   {
@@ -354,7 +364,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "plt.plot(no_null_data.sort_values('MONTH').groupby(['MONTH'])['WEATHER_DELAY'].mean(), no_null_data.sort_values('MONTH').groupby(['MONTH'])['ARRIVAL_DELAY'].median(), linestyle='None', marker='o')\n"
+    "plt.plot(no_null_data.groupby(['MONTH'])['WEATHER_DELAY'].mean(), no_null_data.groupby(['MONTH'])['ARRIVAL_DELAY'].mean(), linestyle='None', marker='o')\n"
    ]
   },
   {
@@ -363,7 +373,7 @@
    "source": [
     "    Your answer: \n",
     "    minimum weather delay: October\n",
-    "    maximum weather delay: Feburary"
+    "    maximum weather delay: February"
    ]
   },
   {
@@ -379,7 +389,7 @@
    "metadata": {},
    "source": [
     "    Your answer:\n",
-    "    there is a slightly positive relationship with some outliers"
+    "    there is a slightly positive relationship between the weather delay and arrival delay with some outliers"
    ]
   },
   {
@@ -396,10 +406,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# I think this plot is pretty confusing :D ALso blue & orange appear twice. \n",
+    "# However, you can easily see the day month combo with the longest delay, I added an alternative version below\n",
+    "\n",
     "plt.figure(figsize=[9,5])\n",
     "for i in range(1, 13):\n",
     "    plot = no_null_data[no_null_data['MONTH'] == i].sort_values(['MONTH','DAY_OF_WEEK']).groupby(['DAY_OF_WEEK'])['ARRIVAL_DELAY'].mean().plot(linestyle='None', marker='o')\n",
     "plot.legend(range(1,13), loc='center left', bbox_to_anchor=(1, 0.5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# compute means by month and weekday\n",
+    "ad_by_month_weekday = no_null_data.groupby(['MONTH', 'DAY_OF_WEEK'])['ARRIVAL_DELAY'].mean()\n",
+    "\n",
+    "# plot results\n",
+    "fig, axes = plt.subplots( nrows=3, ncols=4, sharey=True )\n",
+    "fig.set_figwidth(16)\n",
+    "fig.set_figheight(16)\n",
+    "months = ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec']\n",
+    "\n",
+    "for i in range(3):\n",
+    "    for j in range(4):\n",
+    "        ad_by_month_weekday[i*4+j+1].plot.bar(ax=axes[i,j])\n",
+    "        axes[i,j].set_title(months[i*4+j])\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
@@ -435,6 +473,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Felix: Its also possible to use pandas' hist function:\n",
+    "\n",
+    "wd_greater_3 = no_null_data[no_null_data['WEATHER_DELAY'] >= 3*60]\n",
+    "wd_greater_3.hist(column='WEATHER_DELAY', bins=50)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -445,10 +495,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# Felix: I think they mean a distribution for each month\n",
+    "\n",
+    "sb.displot(no_null_data[no_null_data['WEATHER_DELAY'] > 180]['MONTH'], kde=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sb.displot(no_null_data[no_null_data['WEATHER_DELAY'] > 180]['MONTH'], kde=True)"
+    "wd_greater_3.hist(column = 'WEATHER_DELAY', by='MONTH', figsize=(15,15), bins=20)"
    ]
   },
   {
@@ -465,8 +528,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Felix: i think here we are supposed to analyze the differences of arrival delay and weather delay and not between the airlines\n",
+    "# also only arrival delay has to be >6h\n",
+    "\n",
     "sb.displot([no_null_data['WEATHER_DELAY'][(no_null_data['WEATHER_DELAY'] >= 360) & (no_null_data['AIRLINE'] == 'EV')], no_null_data['ARRIVAL_DELAY'][(no_null_data['ARRIVAL_DELAY'] >= 360) & (no_null_data['AIRLINE'] == 'EV')]])\n",
     "sb.displot([no_null_data['WEATHER_DELAY'][(no_null_data['WEATHER_DELAY'] >= 360) & (no_null_data['AIRLINE'] == 'VX')], no_null_data['ARRIVAL_DELAY'][(no_null_data['ARRIVAL_DELAY'] >= 360) & (no_null_data['AIRLINE'] == 'VX')]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ad_greater_6 = no_null_data[no_null_data['ARRIVAL_DELAY'] > 6*60]\n",
+    "ev_vx_data = ad_greater_6[(ad_greater_6.AIRLINE == 'EV') | (ad_greater_6.AIRLINE == 'VX')]\n",
+    "\n",
+    "sb.jointplot(data=ev_vx_data, x=\"ARRIVAL_DELAY\", y=\"WEATHER_DELAY\", kind=\"hist\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sb.jointplot(data=ev_vx_data, x=\"ARRIVAL_DELAY\", y=\"WEATHER_DELAY\", kind=\"kde\", fill=True)"
    ]
   },
   {
@@ -476,6 +563,21 @@
     "       Your answer:\n",
     "       TODO: update answer\n",
     "       For airline EV, it is noticable, that the bigger the delay is, between ~360-500 min, the more linkely it is, that the delay was caused by the weather. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <font color=\"red\">Todos Question 1 </font>\n",
+    "\n",
+    "1. add lables to plots\n",
+    "2. decide on plots where there are two versions\n",
+    "3. flesh out text answers\n",
+    "4. document code\n",
+    "5. move imports to top??\n",
+    "6. double check unit of time in the dataset (minutes vs. hours), now we assume hours in 1) and minutes in 2)\n",
+    "7. optional: make plots more beautiful (colors, size etc.)"
    ]
   },
   {
