solve exercise 4, text answers are still missing

--- a/Assignment 1/assignment_part1.ipynb
+++ b/Assignment 1/assignment_part1.ipynb
@@ -991,7 +991,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code\n"
+    "clustering_dataset = no_null_data.copy(deep=True)\n",
+    "# remove flights with more than 600 min WEATHER_DELAY or LATE_AIRCRAFT_DELAY \n",
+    "clustering_dataset = clustering_dataset[(clustering_dataset.WEATHER_DELAY <= 600) & (clustering_dataset.LATE_AIRCRAFT_DELAY <= 600)]\n",
+    "# remove flights that have neither WEATHER_DELAY nor LATE_AIRCRAFT_DELAY (33 times less)\n",
+    "clustering_dataset = clustering_dataset[(clustering_dataset.WEATHER_DELAY > 0) & (clustering_dataset.LATE_AIRCRAFT_DELAY > 0)]\n",
+    "\n",
+    "clustering_dataset['AIR_TIME_DELAY'] = clustering_dataset['ELAPSED_TIME'] - clustering_dataset['SCHEDULED_TIME'] \n",
+    "print('number of columns: ', clustering_dataset.shape[1])\n",
+    "print('number of rows: ', clustering_dataset.shape[0])\n",
+    "# maybe move columns to front and also display rest of data?\n",
+    "clustering_dataset[['ELAPSED_TIME', 'SCHEDULED_TIME', 'AIR_TIME_DELAY']].head(10)"
    ]
   },
   {
@@ -1023,7 +1033,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code\n"
+    "from sklearn.cluster import KMeans\n",
+    "import numpy as np\n",
+    "\n",
+    "# we use a matriculation number as random seed\n",
+    "kmeans = KMeans(n_clusters=5, random_state=427492).fit(clustering_dataset[['AIR_TIME_DELAY', 'WEATHER_DELAY', 'LATE_AIRCRAFT_DELAY']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# display result info\n",
+    "unique, counts = np.unique(kmeans.labels_, return_counts=True)\n",
+    "occs = dict(zip(unique, counts))\n",
+    "\n",
+    "for i in range(5):\n",
+    "    print('cluster {}:'.format(i+1))\n",
+    "    print('center: {}'.format(kmeans.cluster_centers_[i]))\n",
+    "    print('count: {}\\n'.format(occs[i]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clustering_dataset['cluster'] = ['c{}'.format(l) for l in kmeans.labels_]"
    ]
   },
   {
@@ -1049,7 +1088,97 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code\n"
+    "# create color map \n",
+    "def get_color(x):\n",
+    "    if x == 'c0':\n",
+    "        return 'blue'\n",
+    "    elif x == 'c1':\n",
+    "        return 'red'\n",
+    "    elif x == 'c2':\n",
+    "        return 'green'\n",
+    "    elif x == 'c3':\n",
+    "        return 'black'\n",
+    "    else:\n",
+    "        return 'purple'\n",
+    "    \n",
+    "colors = [get_color(c) for c in clustering_dataset['cluster']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# creating figure\n",
+    "from mpl_toolkits.mplot3d import Axes3D\n",
+    "fig = plt.figure()\n",
+    "ax = Axes3D(fig, auto_add_to_figure=False)\n",
+    "fig.add_axes(ax)\n",
+    "\n",
+    "step = 10\n",
+    "  \n",
+    "# creating the plot\n",
+    "plot_geeks = ax.scatter(clustering_dataset['AIR_TIME_DELAY'][::step], \n",
+    "                        clustering_dataset['LATE_AIRCRAFT_DELAY'][::step], \n",
+    "                        clustering_dataset['WEATHER_DELAY'][::step], c=colors[::step])\n",
+    "  \n",
+    "# setting title and labels\n",
+    "ax.set_title(\"kmeans results\")\n",
+    "ax.set_xlabel('AIR_TIME_DELAY')\n",
+    "ax.set_ylabel('LATE_AIRCRAFT_DELAY')\n",
+    "ax.set_zlabel('WEATHER_DELAY')\n",
+    "  \n",
+    "# displaying the plot\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from scipy import stats\n",
+    "\n",
+    "sns.set(style='white')\n",
+    "plot_data = clustering_dataset[['AIR_TIME_DELAY', 'WEATHER_DELAY', 'LATE_AIRCRAFT_DELAY']].iloc[::10]\n",
+    "\n",
+    "def corrfunc(x, y, **kws):\n",
+    "    r, p = stats.pearsonr(x, y)\n",
+    "    p_stars = ''\n",
+    "    if p <= 0.05:\n",
+    "        p_stars = '*'\n",
+    "    if p <= 0.01:\n",
+    "        p_stars = '**'\n",
+    "    if p <= 0.001:\n",
+    "        p_stars = '***'\n",
+    "    ax = plt.gca()\n",
+    "    ax.annotate('r = {:.2f} '.format(r) + p_stars,\n",
+    "                xy=(0.05, 0.9), xycoords=ax.transAxes)\n",
+    "\n",
+    "def annotate_colname(x, **kws):\n",
+    "    ax = plt.gca()\n",
+    "    ax.annotate(x.name, xy=(0.05, 0.9), xycoords=ax.transAxes,\n",
+    "                fontweight='bold')\n",
+    "\n",
+    "def cor_matrix(df):\n",
+    "    g = sns.PairGrid(df, palette=['red'])\n",
+    "    # Use normal regplot as `lowess=True` doesn't provide CIs.\n",
+    "    g.map_upper(sns.regplot, scatter_kws={'s':10})\n",
+    "    g.map_diag(sns.distplot)  # change to histplot to remove warning, but removes continuous graph\n",
+    "    g.map_diag(annotate_colname)\n",
+    "    g.map_lower(sns.kdeplot, cmap='Blues_d')\n",
+    "    g.map_lower(corrfunc)\n",
+    "    # Remove axis labels, as they're in the diagonals.\n",
+    "    for ax in g.axes.flatten():\n",
+    "        ax.set_ylabel('')\n",
+    "        ax.set_xlabel('')\n",
+    "    return g\n",
+    "\n",
+    "cor_matrix(plot_data)"
    ]
   },
   {
@@ -1058,6 +1187,19 @@
    "source": [
     "    Your answer:\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <font color=\"red\">Todos Question 4 </font>\n",
+    "\n",
+    "1. add lables to plots\n",
+    "2. decide on removal of flights without weather or late aircraft delay (maybe do both?)\n",
+    "3. write text answer\n",
+    "4. document code\n",
+    "5. move imports to top??"
    ]
   }
  ],
