cleared cells and incremental changes

--- a/Assignment 1/assignment_part1.ipynb
+++ b/Assignment 1/assignment_part1.ipynb
@@ -674,6 +674,7 @@
    "metadata": {},
    "source": [
     "    Your answer:\n",
+    "    DAY_OF_WEEK\n",
     "    "
    ]
   },
@@ -689,7 +690,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    Your answer:\n"
+    "    Your answer:\n",
+    "    - Flights in the afternoon and evening\n",
+    "    - Flights during the week\n"
    ]
   },
   {
@@ -795,10 +798,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "flights_filtered.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Your code\n",
-    "flights_filtered = flights_cr_clean[['MONTH', 'DAY',\n",
-    "       'DAY_OF_WEEK', # 'AIRLINE',  'ORIGIN_AIRPORT', 'DESTINATION_AIRPORT', \n",
-    "       'SCHEDULED_TIME', 'DISTANCE', 'SCHEDULED_ARRIVAL', 'DAY_YEARLY', 'WEEK', \n",
+    "flights_filtered = flights_cr_clean[['DAY_OF_WEEK', 'AIRLINE',  'ORIGIN_AIRPORT', 'DESTINATION_AIRPORT', \n",
+    "       'DISTANCE', 'DAY_YEARLY', \n",
     "       'SCHEDULED_DEPARTURE_CATEGORY']]\n",
     "\n",
     "flights_descriptive_f = pd.get_dummies(flights_filtered)\n",
@@ -821,7 +832,9 @@
     "# Your code\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(flights_descriptive_f, flights_cr_clean['DELAY>3h'], test_size=0.85, random_state=42)"
+    "X_train, X_test, y_train, y_test = train_test_split(flights_descriptive_f, flights_cr_clean['DELAY>3h'], test_size=0.85, random_state=42)\n",
+    "y_train_arr = [val for val in y_train]\n",
+    "y_test_arr = [val for val in y_test]"
    ]
   },
   {
@@ -839,7 +852,7 @@
    "outputs": [],
    "source": [
     "#you may put code here, if necessary\n",
-    "len(flights_descriptive_f[flights_cr_clean['DELAY>3h'] == True])/len(flights_descriptive_f[flights_cr_clean['DELAY>3h'] == False])"
+    "len(flights_cr_clean['DELAY>3h'][flights_cr_clean['DELAY>3h'] == True]) / len(flights_cr_clean['DELAY>3h'])"
    ]
   },
   {
@@ -847,7 +860,7 @@
    "metadata": {},
    "source": [
     "    Your answer:\n",
-    "    The macro f1 score, since the dataset is very imbalanced in such a way, that most of the flights don't have a delay of more than 3h. By using the f1 score, we equally weight the quality of the predictions for the delay of more than 3h as the ones with less then 3h."
+    "    The AUC since it equally weights the performance of the predictions on the > 3h delay datapoints and on the <= 3h datapoints. This is important, since the dataset is very unbalanced."
    ]
   },
   {
@@ -865,11 +878,9 @@
    "outputs": [],
    "source": [
     "# Your code\n",
-    "from sklearn.metrics import f1_score\n",
+    "from sklearn.metrics import roc_auc_score\n",
     "\n",
-    "y_pred_baseline = [False for value in y_test]\n",
-    "y_true_list = [value for value in y_test]\n",
-    "f1_score(y_true_list, y_pred_baseline, average='macro')"
+    "roc_auc_score(y_test_arr, [True for val in y_test_arr])"
    ]
   },
   {
@@ -877,7 +888,7 @@
    "metadata": {},
    "source": [
     "    Your answer:\n",
-    "    The baseline is 49.87%. This is because by simply predicting every value as the majority of the values of the target value, we on average get a higher value than with random predictions.\n",
+    "    The baseline is 50%. This is because by predicting every true positive right, one archives that score. An equal score would be achieved by predicting every False negative right. \n",
     "    "
    ]
   },
@@ -914,11 +925,11 @@
     "             'penalty':['l2'],\n",
     "             'class_weight':[{'False':0.001, 'True':99.999},'balanced']}\n",
     "grid_regr = GridSearchCV(LogisticRegression(solver = 'liblinear', multi_class = 'ovr'), param_grid, cv = 5, verbose = 3) \n",
-    "grid_regr.fit(X_train, [val for val in y_train])\n",
+    "grid_regr.fit(X_train, y_train_arr)\n",
     "print(grid_regr.best_params_) \n",
     "\n",
     "y_pred_regr = grid_regr.predict(X_test)\n",
-    "f1_score([val for val in y_test], y_pred_regr, average='macro')"
+    "roc_auc_score(y_test_arr, y_pred_regr)"
    ]
   },
   {
@@ -940,13 +951,13 @@
     "from sklearn.svm import SVC\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "\n",
-    "param_grid = {'kernel': ['linear']}\n",
+    "param_grid = {'kernel': ['poly', 'rbf']}\n",
     "grid_svm = GridSearchCV(SVC(C=1), param_grid, cv = 5, verbose = 3) \n",
-    "grid_svm.fit(np.array(X_train[0:10000], dtype=np.float32), np.array(y_train[0:10000], dtype=np.float32))\n",
+    "grid_svm.fit(X_train[0:10000], y_train_arr[0:10000])\n",
     "print(grid_svm.best_params_)\n",
     "\n",
     "y_pred_svm = grid_svm.predict(X_test)\n",
-    "f1_score([val for val in y_test], y_pred_svm, average='macro')"
+    "roc_auc_score(y_test_arr, y_pred_svm)"
    ]
   },
   {
@@ -966,10 +977,15 @@
    "outputs": [],
    "source": [
     "# Your code\n",
-    "param_grid = {'hidden_layer_sized': (100,)}  \n",
+    "from sklearn.neural_network import MLPClassifier\n",
+    "\n",
+    "param_grid = {'hidden_layer_sizes': [(100,), (50, 50)]}\n",
     "grid_mlp = GridSearchCV(MLPClassifier(), param_grid, cv = 5, verbose = 3) \n",
-    "grid_mlp.fit(X_train, [val for val in y_train])\n",
-    "print(grid_mlp.best_params_)"
+    "grid_mlp.fit(X_train, y_train_arr)\n",
+    "print(grid_mlp.best_params_)\n",
+    "\n",
+    "y_pred_mlp = grid_mlp.predict(X_test)\n",
+    "roc_auc_score(y_test_arr, y_pred_mlp)"
    ]
   },
   {
@@ -986,7 +1002,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code if needed"
+    "# your code if needed\n",
+    "from sklearn.metrics import roc_curve\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "import random\n",
+    "\n",
+    "def plot_roc(fpr, tpr, predictor):\n",
+    "    plt.subplots(1, figsize=(10,10))\n",
+    "    plt.title('Receiver Operating Characteristic - ' + predictor)\n",
+    "    plt.plot(fpr, tpr)\n",
+    "    plt.plot([0, 1], ls=\"--\")\n",
+    "    plt.plot([0, 0], [1, 0] , c=\".7\"), plt.plot([1, 1] , c=\".7\")\n",
+    "    plt.ylabel('True Positive Rate')\n",
+    "    plt.xlabel('False Positive Rate')\n",
+    "    plt.show()\n",
+    "\n",
+    "\n",
+    "\n",
+    "# random guessing:\n",
+    "y_pred_random = [bool(random.getrandbits(1)) for val in y_test]\n",
+    "fpr_random, tpr_random, _ = roc_curve(y_test_arr, y_pred_random)\n",
+    "plot_roc(fpr_random, tpr_random, 'random guessing')\n",
+    "print('AUC random guessing: {}'.format(roc_auc_score(y_test_arr, y_pred_random)))\n",
+    "\n",
+    "fpr_regr, tpr_regr, _ = roc_curve(y_test_arr, y_pred_regr)\n",
+    "plot_roc(fpr_regr, tpr_regr, 'regression')\n",
+    "print('AUC regression: {}'.format(roc_auc_score(y_test_arr, y_pred_regr)))\n",
+    "\n",
+    "fpr_svm, tpr_svm, _ = roc_curve(y_test_arr, y_pred_svm)\n",
+    "plot_roc(fpr_svm, tpr_svm, 'SVM')\n",
+    "print('AUC SVM: {}'.format(roc_auc_score(y_test_arr, y_pred_svm)))\n",
+    "\n",
+    "fpr_mlp, tpr_mlp, _ = roc_curve(y_test_arr, y_pred_mlp)\n",
+    "plot_roc(fpr_svm, tpr_svm, 'MLP')\n",
+    "print('AUC MLP: {}'.format(roc_auc_score(y_test_arr, y_pred_mlp)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import precision_score\n",
+    "\n",
+    "precision_score(y_test_arr, y_pred_regr)*150"
    ]
   },
   {
@@ -994,7 +1054,9 @@
    "metadata": {},
    "source": [
     "    Your answer:\n",
-    "    \n",
+    "    Since the regression achieved the highest AUC out of all the classifiers, it is the best performing one.\n",
+    "\n",
+    "    At a price of <=1,06€, the flight becomes profitable\n",
     "    "
    ]
   },
