removed comments from decision tree

--- a/Assignment 1/assignment_part1.ipynb
+++ b/Assignment 1/assignment_part1.ipynb
@@ -659,30 +659,26 @@
     "data = no_null_data_UA[['SCHEDULED_DEPARTURE_CATEGORY', 'DISTANCE_CATEGORY', 'DAY_OF_WEEK', 'DELAY']]\n",
     "columns = data.columns\n",
     "\n",
-    "#All columns except the last one are descriptive by default\n",
     "descriptive_features = ['SCHEDULED_DEPARTURE_CATEGORY', 'DISTANCE_CATEGORY', 'DAY_OF_WEEK']\n",
-    "#The last column is considered as label\n",
     "label = 'DELAY'\n",
     "\n",
-    "#Converting all the columns to string\n",
+    "# Converting all the columns to string\n",
     "for column in columns:\n",
     "    data[column]= data[column].astype(str)\n",
     "\n",
     "data_descriptive = data[descriptive_features].values\n",
     "data_label = data[label].values\n",
     "\n",
-    "#Calling DecisionTree constructor (the last parameter is criterion which can also be \"gini\")\n",
+    "# Calling DecisionTree constructor\n",
     "decisionTree = DecisionTree(data_descriptive.tolist(), descriptive_features, data_label, \"entropy\")\n",
     "\n",
-    "#Here you can pass pruning features (gain_threshold and minimum_samples)\n",
+    "# set min splitting number to 1000\n",
     "decisionTree.id3(0,1000)\n",
     "\n",
     "# Visualizing decision tree by Graphviz\n",
-    "# TODO: broken library? Throws an exception💩\n",
     "dot = decisionTree.print_visualTree(render=True)\n",
     "\n",
-    "# When using Jupyter\n",
-    "#display( dot )"
+    "# display( dot )"
    ]
   },
   {
@@ -1071,7 +1067,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "precision_score(y_test_arr, y_pred_regr)*150"
+    "max([precision_regr, precision_svm, precision_mlp])*150"
    ]
   },
   {
