fixed error for MLP

--- a/Assignment 1/assignment_part1.ipynb
+++ b/Assignment 1/assignment_part1.ipynb
@@ -996,11 +996,11 @@
     "X_train_delay_idx = X_train_delay_idx.append(X_train_no_delay_idx)\n",
     "\n",
     "X_train_undersample = X_train.loc[list(X_train_delay_idx)]\n",
-    "y_train_undersample = y_train.filter(items=X_train_delay_idx, axis=0)\n",
+    "y_train_undersample = y_train.loc[list(X_train_delay_idx)]\n",
     "\n",
     "param_grid = {\"hidden_layer_sizes\":[(5,), (4,4,)], }\n",
     "grid_mlp = GridSearchCV(MLPClassifier(), param_grid, cv = 5, verbose = 3, scoring='precision') \n",
-    "grid_mlp.fit(X_train_undersample, y_train_undersample)\n",
+    "grid_mlp.fit(X_train_undersample, [1 if val == True else 0 for val in y_train_undersample])\n",
     "print(grid_mlp.best_params_)\n",
     "\n",
     "y_pred_mlp = grid_mlp.predict(X_test)\n",
@@ -1033,25 +1033,23 @@
     "    plt.xlabel('False Positive Rate')\n",
     "    plt.show()\n",
     "\n",
-    "\n",
-    "\n",
     "# random guessing:\n",
     "y_pred_random = [bool(random.getrandbits(1)) for val in y_test]\n",
     "fpr_random, tpr_random, _ = roc_curve(y_test_arr, y_pred_random)\n",
-    "plot_roc(fpr_random, tpr_random, 'random guessing')\n",
     "print('AUC random guessing: {}'.format(roc_auc_score(y_test_arr, y_pred_random)))\n",
+    "plot_roc(fpr_random, tpr_random, 'random guessing')\n",
     "\n",
     "fpr_regr, tpr_regr, _ = roc_curve(y_test_arr, y_pred_regr)\n",
-    "plot_roc(fpr_regr, tpr_regr, 'regression')\n",
     "print('AUC regression: {}'.format(roc_auc_score(y_test_arr, y_pred_regr)))\n",
+    "plot_roc(fpr_regr, tpr_regr, 'regression')\n",
     "\n",
     "fpr_svm, tpr_svm, _ = roc_curve(y_test_arr, y_pred_svm)\n",
-    "plot_roc(fpr_svm, tpr_svm, 'SVM')\n",
     "print('AUC SVM: {}'.format(roc_auc_score(y_test_arr, y_pred_svm)))\n",
+    "plot_roc(fpr_svm, tpr_svm, 'SVM')\n",
     "\n",
     "fpr_mlp, tpr_mlp, _ = roc_curve(y_test_arr, y_pred_mlp)\n",
-    "plot_roc(fpr_svm, tpr_svm, 'MLP')\n",
     "print('AUC MLP: {}'.format(roc_auc_score(y_test_arr, y_pred_mlp)))\n",
+    "plot_roc(fpr_svm, tpr_svm, 'MLP')\n",
     "\n",
     "print('Precision:')\n",
     "print('regression:{}'.format(precision_regr))\n",
@@ -1075,7 +1073,7 @@
     "    Your answer:\n",
     "    Since the regression achieved the highest AUC out of all the classifiers, it is the best performing one.\n",
     "\n",
-    "    At a price of <=1,06€, the flight becomes profitable\n",
+    "    At a price of <=14,45€, the flight becomes profitable\n",
     "    "
    ]
   },
